[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/User Interface/UI.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/wheaton capitals.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/userInterface/score/ScoreUI.gd" type="Script" id=3]
[ext_resource path="res://assets/art/User Interface/UI blue filled.png" type="Texture" id=4]
[ext_resource path="res://assets/art/User Interface/UI Filled.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/theme/tvStatic.tres" type="Material" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "bobbing"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 25 ), Vector2( 0, 0 ) ]
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="WinNumR" type="Label" parent="Control"]
margin_left = 1021.0
margin_top = 55.0
margin_right = 1107.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinNumL" type="Label" parent="Control"]
margin_left = 25.0
margin_top = 55.0
margin_right = 111.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 1 )
text = "99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinProgressUnderL" type="TextureProgress" parent="Control"]
margin_left = 354.0
margin_top = 37.5
margin_right = 598.0
margin_bottom = 162.5
rect_scale = Vector2( -1, 1 )
max_value = 20.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinProgressUnderR" type="TextureProgress" parent="Control"]
margin_left = 778.0
margin_top = 37.5
margin_right = 1022.0
margin_bottom = 162.5
max_value = 20.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinProgressR" type="TextureProgress" parent="Control"]
margin_left = 789.339
margin_top = 46.5
margin_right = 1033.34
margin_bottom = 171.5
max_value = 20.0
texture_progress = ExtResource( 4 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinProgressL" type="TextureProgress" parent="Control"]
margin_left = 343.661
margin_top = 47.5
margin_right = 587.661
margin_bottom = 172.5
rect_scale = Vector2( -1, 1 )
max_value = 20.0
texture_progress = ExtResource( 5 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 442.149
margin_top = 46.5
margin_right = 702.149
margin_bottom = 130.5
rect_pivot_offset = Vector2( -1380.63, -227.217 )
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control")
anims/bobbing = SubResource( 2 )

[node name="TV Static" type="ColorRect" parent="."]
material = ExtResource( 7 )
anchor_top = 0.00176477
anchor_bottom = 0.00176477
margin_top = -5.49829
margin_right = 1132.0
margin_bottom = 849.502
rect_pivot_offset = Vector2( 327.623, 518.265 )
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
